--- a/styles/globals.css
+++ b/styles/globals.css
@@ -11,6 +11,11 @@ body {
   font-family: 'Epilogue', 'Inter var', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu,
     Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
+
+p {
+  font-family: 'IBM Plex Serif', Georgia;
+}
+
 a {
   color: inherit;
   text-decoration: none;
